Feat: second commit

--- a/views/addUserAccount.ejs
+++ b/views/addUserAccount.ejs
@@ -9,6 +9,10 @@
   </script>
 <style>
 
+.alert {
+	height: 50px;
+}
+
 	.new{
 
 		width: 700px;
@@ -30,7 +34,8 @@
             <li class="breadcrumb-item"> <a href="/dashboarduser/<%= all %>"> Home </a> </li>
             <li class="breadcrumb-item active"> Add Account </li>
             </ol>
-		
+	
+
 		<div class="new">
 	  <div class="">
 		<div class=" xl-8">
@@ -50,9 +55,9 @@
 					
   
 					<div class="form-outline mb-4">
-                         <b> <label for="user-acc"> Add User</label> </b>
+                         <b> <label for="user-acc"> Add Account</label> </b>
             
-                        <input type="text" id="accountname" name="accountname" class="form-control" required="true" placeholder="Enter your username to add account">
+                        <input type="text" id="accountname" name="accountname" class="form-control" required="true" placeholder="Enter account name">
 					</div>
 
 					<div class="pt-2 mb-4">
