--- a/views/addUserByEmail.ejs
+++ b/views/addUserByEmail.ejs
@@ -8,6 +8,10 @@
   </script>
 <style>
 
+.alert {
+	height: 50px;
+}
+
 	.new{
 
 		width: 700px;
@@ -17,20 +21,30 @@
 </style>
 
 <section class="vh-100" style="background-color: #dee9ff;">
-
+	
+	
     
-
-            <!-- <h1 class ="display-4"> Add account</h1> -->
-
-
+	
+	<!-- <h1 class ="display-4"> Add account</h1> -->
+	
+	
 	<div class="container py-1 h-100">
-        
-        <ol class="breadcrumb"> 
-            <li class="breadcrumb-item"> <a href="/dashboarduser/<%= allnew %>"> Home </a> </li>
+		
+		<ol class="breadcrumb"> 
+			<li class="breadcrumb-item"> <a href="/dashboarduser/<%= allnew %>"> Home </a> </li>
             <li class="breadcrumb-item active"> Add Account </li>
-            </ol>
-
-
+		</ol>
+		
+		
+		<% if (err !== null) { %>
+			  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+				<strong><%= err %></strong>
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				  <span aria-hidden="true">&times;</span>
+				</button>
+			  </div>
+	
+		<% } %>
 		<div class="new">
 	  <div class="">
 		<div class=" xl-8">
