--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -27,8 +27,8 @@
 	<div class="container py-1 h-100">
         
         <ol class="breadcrumb" > 
-            <li class="breadcrumb-item"> <a href="/dashboarduser/<%= all %>"> Home </a> </li>
-            <li class="breadcrumb-item active"> Change Password </li>
+            <li class="breadcrumb-item"> <a href="/login"> Login </a> </li>
+            <li class="breadcrumb-item active"> Forgot Password </li>
             </ol>
 		
 		<div class="new">
@@ -40,20 +40,19 @@
 			  <div class="">
 				<div class="card-body p-4 p-lg-5 text-black">
 
-			    <form method="post" action="/dashboarduser/changePassword/<%= all %>">	
+			    <form method="post" action="/forgotPassword">	
   
 					<!-- <div class="">
 					  <i class="fas fa-cubes fa-2x me-3" style="color: #131110;"></i>
 					  <span class="h1 fw-bold mb-4"> Add account </span>
 					</div>
    -->
-   					
-					<div class="form-outline mb-4">
-						<b> <label for="user-acc">Email </label> </b>
+                    <div class="form-outline mb-4">
+                        <b> <label for="user-acc">Email </label> </b>
 
-						<input type="email" id="email" name="eamil" class="form-control" required="true" placeholder="Enter a your email">
-					</div>
-
+                    <input type="email" id="email" name="eamil" class="form-control" required="true" placeholder="Enter a your email">
+                    </div>
+  
 					<div class="form-outline mb-4">
                          <b> <label for="user-acc">New Password </label> </b>
             
@@ -69,7 +68,7 @@
 					<div class="pt-2 mb-4">
 
 
-					  <input type="button" class="btn btn-dark " value="cancel" id="cancel" onclick="accountCancel()"> </button>
+					  <input type="reset" class="btn btn-dark " value="cancel" id="cancel"> </button>
 
 					  <button class="btn btn-dark " type="buttom" >Submit</button>
 
