--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,18 +36,34 @@
 				
 				  </div>
 
-				  
+				  	
+		<% if (err !=null ) { %>
+			<div class="alert alert-danger alert-dismissible fade show" role="alert">
+			  <strong><%= err %></strong>
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+  
+	  <% } %>
 				<form action="/login" method="post">
 				  <div class="form-floating mb-4">
 					<input type="email" name="email" class="form-control" id="floatingInput" placeholder="Enter your email">
 					<label for="floatingInput">Email address</label>
 				  </div>
+
+
 				  <div class="form-floating mb-3">
 					<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
 					<label for="floatingPassword">Password</label>
 				  </div>
 	
-				
+				  <p>
+					<div class="form-group">
+					   <p class="text-center">Forgot password ? <a href="/forgotPassword" id="forgetpassword">Click Here</a></p>
+					</div>
+				   </p>
+
 				  <div class="d-grid">
 					<button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
 					  In</button>
