Feat: new commit

--- a/views/transactionPage.ejs
+++ b/views/transactionPage.ejs
@@ -133,7 +133,11 @@ $(document).ready(function(){
                 <div class="row">
                     <div class="col-sm-8"><h2>Transaction <b>Details</b></h2></div>
                     <div class="col-sm-4">
-                     
+                      <div class="search-box">
+                              
+                               <input type="text" class="form-control" placeholder="Search">
+                           </div>
+
                     </div>
                 </div>
             </div>
@@ -189,17 +193,17 @@ $(document).ready(function(){
       
     
    
-               <!-- <div class="clearfix">
+            <div class="clearfix">
                 <ul class="pagination">
                     <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
                     <li class="page-item"><a href="/dashboarduser/tr/:id?page&limit" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
+                    <li class="page-item "><a href="#" class="page-link">3</a></li>
                     <li class="page-item"><a href="#" class="page-link">4</a></li>
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
                 </ul>
-            </div>  -->
+            </div>  
 
         </div>
     </div>  
